fixing z-index modal

--- a/src/scss/main/_style.scss
+++ b/src/scss/main/_style.scss
@@ -93,6 +93,10 @@ a.active{
   top: -20px;
 }
 
+.modal-open .modal{
+  z-index: 9999999 !important;
+}
+
 .content{
   // background: #ddd;
   height: 600px;
